2022-01-20  Alex Kotov  <kotovalexarian@gmail.com>

	* libkernaux 0.1.0 released
	* include/kernaux/assert.h: Added unconditional assertion (panic)
	* include/kernaux/assert.h: Added guards for unconditional assertion (panic)