@@ -3,3 +3,4 @@
 	* libkernaux 0.1.0 released
 	* include/kernaux/assert.h: Added unconditional assertion (panic)
 	* include/kernaux/assert.h: Added guards for unconditional assertion (panic)
+	* src/printf.c: Fix bug and actually enable floating-point arithmetics
